env file change, allow local and remote origin

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-PORT=3000
-# CORS_ORIGIN=http://localhost:5173
-CORS_ORIGIN=https://bond-calculator-frontend-6105537d8e82.herokuapp.com
-NODE_ENV=development
+LOCAL_CORS_ORIGIN=
+REMOTE_CORS_ORIGIN=
